--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,74 +10,54 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets LinguistTools)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools Core Network WebSockets)
 
 set(TS_FILES singal-admin_ko_KR.ts)
 
 set(PROJECT_SOURCES
-        main.cpp
-        mainwindow.cpp
-        mainwindow.h
-        mainwindow.ui
-        ${TS_FILES}
+    main.cpp
+    mainwindow.cpp
+    mainwindow.h
+    mainwindow.ui
+    ${TS_FILES}
+    facility.h facility.cpp
+    timerwidget.h timerwidget.cpp
+    computerfacility.h computerfacility.cpp
+    simplefacility.h simplefacility.cpp
+    reservationmanager.h reservationmanager.cpp
+    membermanager.h membermanager.cpp
+    networkservice.h networkservice.cpp
+    maincontroller.h maincontroller.cpp
+    websocketserver.h websocketserver.cpp
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    find_package(Qt6 REQUIRED COMPONENTS Widgets)
-find_package(Qt6 REQUIRED COMPONENTS Widgets)
-find_package(Qt6 REQUIRED COMPONENTS Widgets)
-find_package(Qt6 REQUIRED COMPONENTS Core)
-find_package(Qt6 REQUIRED COMPONENTS Network)
-
     qt_add_executable(singal-admin
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
-        facility.h facility.cpp
-        timerwidget.h timerwidget.cpp
-        computerfacility.h computerfacility.cpp
-        simplefacility.h simplefacility.cpp
-        reservationmanager.h reservationmanager.cpp
-        membermanager.h membermanager.cpp
-        networkservice.h networkservice.cpp
-        maincontroller.h maincontroller.cpp
-
-
     )
-# Define target properties for Android with Qt 6 as:
-#    set_property(TARGET singal-admin APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
-#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
-# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
-
     qt_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 else()
     if(ANDROID)
-        add_library(singal-admin SHARED
-            ${PROJECT_SOURCES}
-        )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
+        add_library(singal-admin SHARED ${PROJECT_SOURCES})
     else()
-        add_executable(singal-admin
-            ${PROJECT_SOURCES}
-        )
+        add_executable(singal-admin ${PROJECT_SOURCES})
     endif()
-
     qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 endif()
 
-target_link_libraries(singal-admin PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
-target_link_libraries(singal-admin PRIVATE Qt6::Widgets)
-target_link_libraries(singal-admin PRIVATE Qt6::Widgets)
-target_link_libraries(singal-admin PRIVATE Qt6::Widgets)
-target_link_libraries(singal-admin PRIVATE Qt6::Core)
-target_link_libraries(singal-admin PRIVATE Qt6::Network)
+target_link_libraries(singal-admin PRIVATE
+    Qt${QT_VERSION_MAJOR}::Widgets
+    Qt${QT_VERSION_MAJOR}::Core
+    Qt${QT_VERSION_MAJOR}::Network
+    Qt${QT_VERSION_MAJOR}::WebSockets
+)
 
-# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
-# If you are developing for iOS or macOS you should consider setting an
-# explicit, fixed bundle identifier manually though.
+# macOS / iOS 번들 ID 설정
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.singal-admin)
+    set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.singal-admin)
 endif()
+
 set_target_properties(singal-admin PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
