--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(singal-admin VERSION 0.1 LANGUAGES CXX)
+project(Singal-Admin VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -10,55 +10,54 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets LinguistTools)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools Core Network WebSockets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools)
 
-set(TS_FILES singal-admin_ko_KR.ts)
+set(TS_FILES Singal-Admin_ko_KR.ts)
 
 set(PROJECT_SOURCES
-    main.cpp
-    mainwindow.cpp
-    mainwindow.h
-    mainwindow.ui
-    ${TS_FILES}
-    facility.h facility.cpp
-    timerwidget.h timerwidget.cpp
-    computerfacility.h computerfacility.cpp
-    simplefacility.h simplefacility.cpp
-    reservationmanager.h reservationmanager.cpp
-    membermanager.h membermanager.cpp
-    networkservice.h networkservice.cpp
-    maincontroller.h maincontroller.cpp
-    websocketserver.h websocketserver.cpp
+        main.cpp
+        mainwindow.cpp
+        mainwindow.h
+        mainwindow.ui
+        ${TS_FILES}
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(singal-admin
+    qt_add_executable(Singal-Admin
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
+# Define target properties for Android with Qt 6 as:
+#    set_property(TARGET Singal-Admin APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
+# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
+
     qt_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 else()
     if(ANDROID)
-        add_library(singal-admin SHARED ${PROJECT_SOURCES})
+        add_library(Singal-Admin SHARED
+            ${PROJECT_SOURCES}
+        )
+# Define properties for Android with Qt 5 after find_package() calls as:
+#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(singal-admin ${PROJECT_SOURCES})
+        add_executable(Singal-Admin
+            ${PROJECT_SOURCES}
+        )
     endif()
+
     qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 endif()
 
-target_link_libraries(singal-admin PRIVATE
-    Qt${QT_VERSION_MAJOR}::Widgets
-    Qt${QT_VERSION_MAJOR}::Core
-    Qt${QT_VERSION_MAJOR}::Network
-    Qt${QT_VERSION_MAJOR}::WebSockets
-)
+target_link_libraries(Singal-Admin PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
-# macOS / iOS 번들 ID 설정
+# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
+# If you are developing for iOS or macOS you should consider setting an
+# explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-    set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.singal-admin)
+  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.Singal-Admin)
 endif()
-
-set_target_properties(singal-admin PROPERTIES
+set_target_properties(Singal-Admin PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -67,12 +66,12 @@ set_target_properties(singal-admin PROPERTIES
 )
 
 include(GNUInstallDirs)
-install(TARGETS singal-admin
+install(TARGETS Singal-Admin
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(singal-admin)
+    qt_finalize_executable(Singal-Admin)
 endif()
